--- a/client/index.html
+++ b/client/index.html
@@ -256,12 +256,25 @@
 							var map = new google.maps.Map(document.getElementById('map'), {
 								zoom: 9,
 								center: new google.maps.LatLng(33.971990, -117.727669),
-								mapTypeId: google.maps.MapTypeId.ROADMAP
+								mapTypeId: google.maps.MapTypeId.ROADMAP,
+								zoomControl: true,
+								scaleControl: false,
+								scrollwheel: false,
+							    draggable: true
 							});
 							map.setCenter(new google.maps.LatLng(33.971990, -117.727669));
 							setMarkers(map, locations);
 
 						}
+
+						// options = $.extend({
+						//     scrollwheel: false,
+						//     navigationControl: false,
+						//     mapTypeControl: false,
+						//     scaleControl: false,
+						//     draggable: false,
+						//     mapTypeId: google.maps.MapTypeId.ROADMAP
+						// }, options);
 
 						function setMarkers(map, locations) {
 							var marker, i
