district page logistics

--- a/client/admin.html
+++ b/client/admin.html
@@ -21,7 +21,7 @@
 		<script src="./assets/factories/propertyFactory.js"></script>
 		<script src="./assets/controllers/property.js"></script>
 
-    </head>
+    </head>to
     <body ng-view>
        
     </body>
