minor fixes, push for team

--- a/client/districtPage.html
+++ b/client/districtPage.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/landing-page.css">
 	<script src="/bootstrap/dist/js/bootstrap.js"></script>
 	<script src='./assets/propertyRoutes.js'></script>
+	<script src="./assets/factories/propertyFactory.js"></script>
+	<script src="./assets/controllers/property.js"></script>
 </head>
 <body>
 	<nav id='myNavbar' class="navbar navbar-default navbar-fixed-top navbar-inverse">
