info is displaying on property page

--- a/client/districtPage.html
+++ b/client/districtPage.html
@@ -35,14 +35,14 @@
 						</div>
 						<a class="dropdown-toggle" data-toggle='dropdown' href="#properties">Our Properties<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="">Pasadena & Inland Empire West</a></li>
-							<li><a href="">Inland Empire</a></li>
-							<li><a href="">South Bay</a></li>
-							<li><a href="">Long Beach</a></li>
-							<li><a href="">Orange County North</a></li>
-							<li><a href="">Orange County</a></li>
-							<li><a href="">Orange County South</a></li>
-							<li><a href="">Senior Living and Apartments</a></li>
+							<li><a href="/district#/Pasadena & Inland Empire West">Pasadena & Inland Empire West</a></li>
+							<li><a href="/district#/Inland Empire">Inland Empire</a></li>
+							<li><a href="/district#/South Bay">South Bay</a></li>
+							<li><a href="/district#/Long Beach">Long Beach</a></li>
+							<li><a href="/district#/Orange County North">Orange County North</a></li>
+							<li><a href="/district#/Orange County">Orange County</a></li>
+							<li><a href="/district#/Orange County South">Orange County South</a></li>
+							<li><a href="/district#/Senior Living and Apartments">Senior Living and Apartments</a></li>
 						</ul>
 					</li>
 					<li><a href="/#find-a-property">Find A Space</a></li>
