refactoring of code and made show prop page

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
 							<li><a href="">Senior Living and Apartments</a></li>
 						</ul>
 					</li>
-					<li><a data-target="#find-a-property">Find A Space</a></li>
+					<li><a data-target="#find-a-space">Find A Space</a></li>
 					<li><a data-target="#contact">Contact Us</a></li>
 				</ul>
 			</div>
@@ -66,7 +66,7 @@
 					<div class="carousel-caption">
 						<h1>Sunny Hills Palladium</h1>
 						<p class="lead">A Professional Property and Asset Management since 1993</p>
-						<a class="btn btn-large btn-primary" href="#/find-a-property">Check Availability</a>
+						<a class="btn btn-large btn-primary" href="#/find-a-space">Check Availability</a>
 					</div>
 				</div>
 			</div>
@@ -196,6 +196,7 @@
 						<h4>Inland Empire »</h4>
 						<p>Includes properties in San Bernardino, Redlands, and Moreno Valley.</p>
 					</div>
+					</a>
 				</div>
 			</div>
 			<div class='row'>
@@ -206,6 +207,7 @@
 						<h4>South Bay »</h4>
 						<p>South Bay: Includes properties in Torrance, Lawndale, and Gardena.</p>
 					</div>
+					</a>
 				</div>
 				<div class='col-sm-6 col-xs-12 prop'>
 					<a href="/district#/Long Beach">
@@ -214,6 +216,7 @@
 						<h4>Long Beach »</h4>
 						<p>Includes properties in Long Beach, Carson, Harbor City and Norwalk.</p>
 					</div>
+					</a>
 				</div>
 			</div>
 			<div class='row'>
@@ -224,6 +227,7 @@
 						<h4>Orange County North »</h4>
 						<p>Includes properties in Brea, Fullerton, Anaheim and Chino Hills.</p>
 					</div>
+					</a>
 				</div>
 				<div class='col-sm-6 col-xs-12 prop'>
 					<a href="/district#/Orange County">
@@ -232,6 +236,7 @@
 						<h4>Orange County »</h4>
 						<p>Includes properties in Cerritos, Buena Park, and Anaheim Hills.</p>
 					</div>
+					</a>
 				</div>
 			</div>
 			<div class='row'>
@@ -242,6 +247,7 @@
 						<h4>Orange County South »</h4>
 						<p>Includes properties in Santa Ana, Westminster, Huntington Beach, Costa Mesa.</p>
 					</div>
+					</a>
 				</div>
 				<div class='col-sm-6 col-xs-12 prop'>
 					<a href="/district#/Senior Living and Apartments">
@@ -250,12 +256,13 @@
 						<h4>Senior Living and Apartments »</h4>
 						<p>Includes properties in Long Beach, Pasadena, and Hemet.</p>
 					</div>
+					</a>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id='find-a-property' class='content-section-a'>
+	<div id='find-a-space' class='content-section-a'>
 		<div class='container'>
 			<div class='row'>
 				<div class='col-sm-6'>
@@ -452,7 +459,7 @@
 						</li>
 						<li class='footer-menu-divider'>.</li>
 						<li>
-							<a href="#find-a-property">Find a Property</a>
+							<a href="#find-a-space">Find a Property</a>
 						</li>
 						<li class='footer-menu-divider'>.</li>
 						<li>
