--- a/client/districtPage.html
+++ b/client/districtPage.html
@@ -23,12 +23,12 @@
 		        <span class='icon-bar'></span>
 		        <span class='icon-bar'></span>
 		      </button>
-				<a class="navbar-brand" href="#home">Sunny Hills-Palladium</a>
+				<a class="navbar-brand" href="/">Sunny Hills-Palladium</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/">Home</a></li>
-					<li><a href="/#about">About Us</a></li>
+					<li><a href="">About Us</a></li>
 					<li class="dropdown active">
 						<div class="dropdown-content">
 							<a href="/#about"></a>
@@ -45,14 +45,13 @@
 							<li><a href="/district#/Senior Living and Apartments">Senior Living and Apartments</a></li>
 						</ul>
 					</li>
-					<li><a href="/#find-a-property">Find A Space</a></li>
-					<li><a href="/#contact/">Contact Us</a></li>
+					<li><a href="">Find A Space</a></li>
+					<li><a href="">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<div id='districtInfo' ng-view>
-		<h1>asdfasd</h1>
 	</div>
 <body>
 <footer>
@@ -88,23 +87,23 @@
 		</div>
 	</footer>
 	<script>
-		$(".navbar a, footer a").on('click', function(event) {
-			// Make sure this.hash has a value before overriding default behavior
-			if (this.hash !== "") {
-				// Prevent default anchor click behavior
-				event.preventDefault();
-				// Store hash
-				var hash = this.hash;
-				// Using jQuery's animate() method to add smooth page scroll
-				// The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-				// $('html, body').animate({
-				// 	scrollTop: $(hash).offset().top
-				// }, 800, function() {
-				// 	// Add hash (#) to URL when done scrolling (default click behavior)
-				// 	window.location.hash = hash;
-				// });
-			} // End if
-		});
+		// $(".navbar a, footer a").on('click', function(event) {
+		// 	// Make sure this.hash has a value before overriding default behavior
+		// 	if (this.hash !== "") {
+		// 		// Prevent default anchor click behavior
+		// 		event.preventDefault();
+		// 		// Store hash
+		// 		var hash = this.hash;
+		// 		// Using jQuery's animate() method to add smooth page scroll
+		// 		// The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+		// 		// $('html, body').animate({
+		// 		// 	scrollTop: $(hash).offset().top
+		// 		// }, 800, function() {
+		// 		// 	// Add hash (#) to URL when done scrolling (default click behavior)
+		// 		// 	window.location.hash = hash;
+		// 		// });
+		// 	} // End if
+		// });
 	</script>
 
 
