added scrolling from property site to home site headers

--- a/client/districtPage.html
+++ b/client/districtPage.html
@@ -28,12 +28,12 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/">Home</a></li>
-					<li><a href="/#about">About Us</a></li>
+					<li><a href="/#scroll/about">About Us</a></li>
 					<li class="dropdown active">
 						<div class="dropdown-content">
 							<a href="/#about"></a>
 						</div>
-						<a class="dropdown-toggle" data-toggle='dropdown' href="#properties">Our Properties<span class="caret"></span></a>
+						<a class="dropdown-toggle" data-toggle='dropdown' href="/#scroll/properties">Our Properties<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/district#/Pasadena & Inland Empire West">Pasadena & Inland Empire West</a></li>
 							<li><a href="/district#/Inland Empire">Inland Empire</a></li>
@@ -45,8 +45,8 @@
 							<li><a href="/district#/Senior Living and Apartments">Senior Living and Apartments</a></li>
 						</ul>
 					</li>
-					<li><a href="/#find-a-space">Find A Space</a></li>
-					<li><a href="/#contact">Contact Us</a></li>
+					<li><a href="/#scroll/find-a-space">Find A Space</a></li>
+					<li><a href="/#scroll/contact">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
