--- a/client/admin.html
+++ b/client/admin.html
@@ -7,13 +7,13 @@
 		<script src="/angular/angular.js"></script>
 		<script src="/angular-route/angular-route.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/assets/style/matrix-admin/html/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="/assets/style/matrix-admin/html/css/bootstrap-responsive.min.css" />
-        <link rel="stylesheet" href="/assets/style/matrix-admin/html/css/matrix-login.css" />
-        <link rel="stylesheet" href="/assets/style/matrix-admin/html/css/fullcalendar.css" />
-		<link rel="stylesheet" href="/assets/style/matrix-admin/html/css/matrix-style.css" />
-		<link rel="stylesheet" href="/assets/style/matrix-admin/html/css/matrix-media.css" />
-        <link href="/assets/style/matrix-admin/html/font-awesome/css/font-awesome.css" rel="stylesheet" />
+		<link rel="stylesheet" type='text/css' href="/assets/style/matrix-admin/html/css/bootstrap.min.css" />
+		<link rel="stylesheet" type='text/css' href="/assets/style/matrix-admin/html/css/bootstrap-responsive.min.css" />
+        <link rel="stylesheet" type='text/css' href="/assets/style/matrix-admin/html/css/matrix-login.css" />
+        <link rel="stylesheet" type='text/css' href="/assets/style/matrix-admin/html/css/fullcalendar.css" />
+		<link rel="stylesheet" type='text/css' href="/assets/style/matrix-admin/html/css/matrix-style.css" />
+		<link rel="stylesheet" type='text/css' href="/assets/style/matrix-admin/html/css/matrix-media.css" />
+        <link href="/assets/style/matrix-admin/html/font-awesome/css/font-awesome.css" rel="stylesheet" type='text/css'/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
 		<script src='./assets/main.js'></script>
 		<script src="./assets/factories/userFactory.js"></script>
